# OOP_indie_studio_2019

./: .gitignore  CMakeLists.txt  README.md  save.txt
Fonts/: bomberman12px.xml  bomberman20px.xml  bomberman36px.xml  bomberman68px.xml  chickenPie.xml  plainHandline.xml  simple12px.xml
Ressources/: BlueBomby.mtl  Bomberman.mtl  FlatTerrain.b3d  WhiteNRedBomby.b3d  bomb.b3d  bomberman.b3d  breakable_wall.b3d  exit.b3d  fire.b3d  terrain.b3d  testSpeed.b3d
SRC/: game.cpp  ia.cpp  main.cpp  menu.cpp
headers/: Components.hpp  ECS.hpp  EntityManager.hpp  GameManager.hpp  ia.hpp  menu.hpp
headers/Systems/: Bomb.hpp  ButtonSong.hpp  ISystems.hpp  MeshCollider.hpp  Movement.hpp  Render.hpp  TerrainCollider.hpp
map/: map_1.txt  map_2.txt  map_3.txt  map_4.txt  map_5.txt  map_6.txt  stage_1.txt  stage_2.txt  stage_3.txt  stage_4.txt  stage_5.txt  stage_6.txt  stage_7.txt
